{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 52,
  "lineage": "bef525b3-0624-0070-0098-ced4084cfc81",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.118.126.231",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-12-07T16:05:21.079-08:00",
            "id": "projects/infra-actor-333516/regions/europe-central2/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "project": "infra-actor-333516",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/regions/europe-central2/addresses/vm-public-address"
          },
          "dependencies": [
            "google_compute_firewall.ingress",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2021-12-07T16:05:12.606-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-actor-333516/global/firewalls/test-firewall-egress",
            "name": "test-firewall-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/global/networks/terraform-network",
            "priority": 1000,
            "project": "infra-actor-333516",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/global/firewalls/test-firewall-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-12-07T16:05:12.595-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-actor-333516/global/firewalls/test-firewall-ingress",
            "name": "test-firewall-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/global/networks/terraform-network",
            "priority": 1000,
            "project": "infra-actor-333516",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/global/firewalls/test-firewall-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20211021",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/zones/europe-central2-a/disks/terraform-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-actor-333516/zones/europe-central2-a/instances/terraform-instance",
            "instance_id": "7630785114296960605",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "terraform@infra-actor-333516.iam.gserviceaccount.com:---- BEGIN SSH2 PUBLIC KEY ----\r\nComment: \"rsa-key-20211207\"\r\nAAAAB3NzaC1yc2EAAAADAQABAAABAQCZcIP9WaaDVjI+gVodv3mrqU0pXsosshqv\r\nvd+zTWNLT50IwGbOzCWo7R3pmq83zJJ+VedUUK0LFE9HezALiatkkCXDTqWAC4/X\r\nSHKbuH4HdQrdd1wkw2gZcHKv6o5pV7deESseMf7g2I+aEJ58XvvNRWuFaifKHp7x\r\n/pl9XqM3axXpVgcpQTHb+cqe5pEenUALrkK8OiDv2tBlmu4EF2XMvMb0pd/jRxS5\r\nC5+p75u5u6YxfqV1W2ZvOnK8ntgiZ9xsgf1Lo52vRCLnEcTsr9e3NhI0MzxHvQG2\r\nlyhqkO9/uZF+ [...]
            },
            "metadata_fingerprint": "67EibSruq8U=",
            "name": "terraform-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.139.160",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/global/networks/terraform-network",
                "network_ip": "10.186.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/regions/europe-central2/subnetworks/terraform-network",
                "subnetwork_project": "infra-actor-333516"
              }
            ],
            "project": "infra-actor-333516",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/zones/europe-central2-a/instances/terraform-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_firewall.egress",
            "google_compute_firewall.ingress",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/infra-actor-333516/global/networks/terraform-network",
            "name": "terraform-network",
            "project": "infra-actor-333516",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-actor-333516/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}